--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
+theme:yilia
 # Site settings
 title: AloneMou Blog
 SEOTitle: AloneMou的博客 | BY Blog
@@ -19,7 +20,7 @@ sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's us
 # SNS settings
 RSS: false
 # weibo_username:     qiubaiying
-zhihu_username:     AloneMou
+zhihu_username:     alonemou-43
 github_username:    AloneMou
 #facebook_username:  baiying.qiu.7
 jianshu_username:   38b04549690a
