--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ zhihu_username:     alonemou-43
 github_username:    AloneMou
 #facebook_username:  baiying.qiu.7
 jianshu_username:   38b04549690a
+qq_username:        2627045617
 #twitter_username:   qiubaiying
 
 
