--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,6 @@ zhihu_username:     alonemou-43
 github_username:    AloneMou
 #facebook_username:  baiying.qiu.7
 jianshu_username:   38b04549690a
-qq_username:        2627045617
 #twitter_username:   qiubaiying
 
 
@@ -58,13 +57,13 @@ kramdown:
 
 # 评论系统
 # Disqus（https://disqus.com/）
-# disqus_username: qiubaiying
+disqus_username: alonemou
 
 # Gitalk
 gitalk:
   enable: true    #是否开启Gitalk评论
-  clientID: f2c84e7629bb1446c1a4                            #生成的clientID
-  clientSecret: ca6d6139d1e1b8c43f8b2e19492ddcac8b322d0d    #生成的clientSecret
+  clientID: 7a42da211afa856c8134                            #生成的clientID
+  clientSecret: 94c4ede678790669d6237567b4e6a11515a15e85    #生成的clientSecret
   repo: alonemou.github.io    #仓库名称
   owner: AloneMou    #github用户名
   admin: AloneMou
