修改作者描述配置

--- a/_config.yml
+++ b/_config.yml
@@ -3,15 +3,15 @@ title: AloneMou Blog
 SEOTitle: AloneMou的博客 | BY Blog
 header-img: img/post-bg-desk.jpg
 email: m2954436332@gmail.com
-description: "Every failure is leading towards success."
-keyword: "BY, BY Blog, AloneMou的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
+description: "欢迎进入我的博客，在这里与你分享资源."
+keyword: "BY, BY Blog, AloneMou的博客, alonemou, Java, Eclipse, IDEA"
 url: "https://alonemou.github.io/"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 github_repo: "https://github.com/AloneMou/alonemou.github.io.git" # you code repository
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "Goals determine what you going to be!"
+sidebar-about-description: "一个爱鼓捣代码的程序员"
 sidebar-avatar: /img/about-BY-gentle.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
